# gi-gtk-declarative

./: README.md  cabal.project  default.nix  hie.yaml  shell.nix  stack.yaml
.github/workflows/: main.yml
examples/: Components.hs  CustomAttribute.hs  Main.hs  default.nix  examples.cabal
gi-gtk-declarative/: gi-gtk-declarative.cabal
gi-gtk-declarative-app-simple/: gi-gtk-declarative-app-simple.cabal
gi-gtk-declarative-app-simple/src/GI/Gtk/Declarative/App/: Simple.hs
gi-gtk-declarative-components/: default.nix  gi-gtk-declarative-components.cabal
gi-gtk-declarative-components/src/GI/Gtk/Declarative/: Components.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/: Attributes.hs  Bin.hs  Component.hs  Container.hs  Context.hs  EventSource.hs  Patch.hs  SingleWidget.hs  Widget.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/Attributes/: Custom.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/Attributes/Custom/: Window.hs
gi-gtk-declarative/src/GI/Gtk/Declarative/Component/: Internal.hs  Internal.hs-boot
gi-gtk-declarative/src/GI/Gtk/Declarative/Container/: Box.hs  Grid.hs  MenuItem.hs  Paned.hs  Patch.hs
gi-gtk-declarative/test/: Main.hs
gi-gtk-declarative/test/GI/Gtk/Declarative/: ComponentTest.hs  PatchTest.hs  TestUtils.hs
